# discord-shedbot

./: .dockerignore  .gitignore  Dockerfile  README.rst  build-image.sh  pyproject.toml  requirements.txt  settings.toml  settings.toml.example  setup.py  token
.circleci/: config.yml
shedbot/: main.py
shedbot/cogs/: schedule.py
shedbot/config/: config.py
