[tool.poetry]
name = "discord-shed-bot"
version = "0.1.0"
description = "Sheduling Bot for Discord."
authors = ["Peter Spain <peter@peterspain.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.2"
"discord.py" = "^1.6.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.7.0"
Pygments = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
